# Alpha7XRender

./: .gitignore  CMakeLists.txt  README.md
resource/: test.tga
resource/cornell-box/: scene-v4.pbrt
resource/water-caustic/: scene-v4.pbrt
source/: alpha7x.cpp  alpha7x_math.h  bsdf.h  bxdf.cpp  bxdf.h  cameras.h  common.h  example.cpp  film.h  geometry.cpp  geometry.h  integrators.cpp  integrators.h  interaction.cpp  interaction.h  light.cpp  light.h  lightsampler.cpp  lightsampler.h  lowdiscrepancy.h  main.cpp  material.h  parallel.cpp  parallel.h  primitive.h  ray.h  render.cpp  render.h  samplers.cpp  samplers.h  sampling.cpp  sampling.h  scene.cpp  scene.h  shapes.h
source/glm-aabb/: AABB.cpp  AABB.hpp
source/pbrt/: hash.h  primes.cpp  primes.h
source/pbrt_parser/: paramdict.cpp  paramdict.h  parser.cpp  parser.h
source/rply/: rply.c  rply.h
